--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,145 @@
 /node_modules
+/public/hot
+/public/storage/uploads/users/*
+!/public/storage/uploads/users/no_avatar.png
+/storage/*.key
+/vendor
+/.idea
+/.vscode
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
 .env
+composer.lock
+
+/public/uploads/tis_attach/standard/*
+!/public/uploads/tis_attach/standard/index.html
+/public/uploads/tis_attach/board/*
+!/public/uploads/tis_attach/board/index.html
+/public/uploads/tis_attach/board_crop/*
+!/public/uploads/tis_attach/board_crop/index.html
+/public/uploads/tis_attach/appoint/*
+!/public/uploads/tis_attach/appoint/index.html
+/public/uploads/tis_attach/set_standard/*
+!/public/uploads/tis_attach/set_standard/index.html
+/public/uploads/tis_attach/idea-public/*
+!/public/uploads/tis_attach/idea-public/index.html
+
+/public/uploads/bcertify_attach/signer/*
+!/public/uploads/bcertify_attach/signer/index.html
+/public/storage/uploads/tmp/*
+!/public/storage/uploads/tmp/index.html
+/public/uploads/esurv_attach/other/*
+!/public/uploads/esurv_attach/other/index.html
+/public/uploads/esurv_attach/license_cancel/*
+!/public/uploads/esurv_attach/license_cancel/index.html
+/public/uploads/esurv_attach/inform_change/*
+!/public/uploads/esurv_attach/inform_change/index.html
+/public/uploads/esurv_attach/inform_quality_control/*
+!/public/uploads/esurv_attach/inform_quality_control/index.html
+/public/uploads/esurv_attach/inform_inspection/*
+!/public/uploads/esurv_attach/inform_inspection/index.html
+/public/uploads/esurv_attach/inform_calibrate/*
+!/public/uploads/esurv_attach/inform_calibrate/index.html
+/public/uploads/esurv_attach/inform_volume/*
+!/public/uploads/esurv_attach/inform_volume/index.html
+/public/uploads/esurv_attach/applicant_21bis/*
+!/public/uploads/esurv_attach/applicant_21bis/index.html
+
+/public/uploads/esurv_attach/follow_up/*
+!/public/uploads/esurv_attach/follow_up/index.html
+
+/public/uploads/esurv_attach/inform_calibrate/*
+!/public/uploads/esurv_attach/inform_calibrate/index.html
+
+/public/uploads/esurv_attach/inform_change/*
+!/public/uploads/esurv_attach/inform_change/index.html
+
+/public/uploads/esurv_attach/inform_inspection/*
+!/public/uploads/esurv_attach/inform_inspection/index.html
+
+/public/uploads/esurv_attach/inform_quality_control/*
+!/public/uploads/esurv_attach/inform_quality_control/index.html
+
+/public/uploads/esurv_attach/inform_volume/*
+!/public/uploads/esurv_attach/inform_volume/index.html
+
+/public/uploads/esurv_attach/license_cancel/*
+!/public/uploads/esurv_attach/license_cancel/index.html
+
+/public/uploads/esurv_attach/notification/*
+!/public/uploads/esurv_attach/notification/index.html
+
+/public/uploads/esurv_attach/other/*
+!/public/uploads/esurv_attach/other/index.html
+
+/public/uploads/esurv_attach/volume_20ter/*
+!/public/uploads/esurv_attach/volume_20ter/index.html
+
+/public/uploads/file/*
+!/public/uploads/file/index.html
+
+/public/uploads/ssurv_attach/save_example/*
+!/public/uploads/ssurv_attach/save_example/index.html
+
+/public/uploads/tis_attach/comment_standard_draft/*
+!/public/uploads/tis_attach/comment_standard_draft/index.html
+
+/public/uploads/tis_attach/comment_standard_review/*
+!/public/uploads/tis_attach/comment_standard_review/index.html
+
+/public/uploads/tis_attach/idea-public/*
+!/public/uploads/tis_attach/idea-public/index.html
+
+/public/uploads/tis_attach/import_comment/*
+!/public/uploads/tis_attach/import_comment/index.html
+
+/public/uploads/tis_attach/set_standard/*
+!/public/uploads/tis_attach/set_standard/index.html
+
+/public/uploads/tis_attach/standard/*
+!/public/uploads/tis_attach/standard/index.html
+
+/public/uploads/files/*
+
+/public/uploads/users/*
+!/public/uploads/users/index.html
+
+/storage/files/authorize_files/*
+!/storage/files/authorize_files/index.html
+/storage/files/certificate_files/*
+!/storage/files/certificate_files/index.html
+/storage/files/otherCertificate_files/*
+!/storage/files/otherCertificate_files/index.html
+
+/public/uploads/files/applicants/check_files/*
+!/public/uploads/files/applicants/check_files/index.html
+
+/public/storage/uploads/blog/*
+!/public/storage/uploads/blog/index.html
+/storage/files/applicants/*
+!/storage/files/applicants/index.html
+/storage/files/appointment_files/*
+!/storage/files/appointment_files/index.html
+/storage/files/authorize_files/*
+!/storage/files/authorize_files/index.html
+/storage/files/board_auditor_files/*
+!/storage/files/board_auditor_files/index.html
+/storage/files/certificate_files/*
+!/storage/files/certificate_files/index.html
+/storage/files/otherCertificate_files/*
+!/storage/files/otherCertificate_files/index.html
+storage/files/public_draft/*
+!storage/files/public_draft/index.html
+storage/*
+framework/*
+public/uploads/*
+
+!public/uploads/.htaccess
+!public/storage/.htaccess
+
+public/tmp/mpdf/ttfontdata
+
+desktop.ini
